--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ header {
 header .about {
   width: 90%;
   margin: auto;
-  max-width: 1600px;
+  max-width: 1500px;
   padding: 0.5rem 0 0 0;
 }
 
@@ -44,4 +44,30 @@ header .follow a {
   background-color: #1d9bf0;
   padding: 0.2rem;
   border-radius: 20px;
+}
+
+nav {
+  margin: 1em 0 0 0;
+}
+nav ul {
+  width: 90%;
+  max-width: 1500px;
+  margin: auto;
+  padding-left: 0;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3em;
+  width: 200px;
+}
+
+nav ul li a:hover {
+  background-color: rgba(255, 255, 255, 0.6);
 }
