add footer and style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,3 +161,26 @@ section {
   left: -25px;
   transform: rotate(-30deg);
 }
+
+footer div {
+  width: 90%;
+  max-width: 1500px;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+footer {
+  margin-top: 40px;
+  padding: var(--section-padding);
+  background-image: url(../img/inflicted.png);
+}
+
+footer div ul {
+  list-style-type: disc;
+}
+
+footer a {
+  color: var(--text-color);
+}
