--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,3 +184,26 @@ footer div ul {
 footer a {
   color: var(--text-color);
 }
+
+@media (max-width: 980px) {
+  nav ul {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  nav ul li a {
+    width: 100%;
+  }
+}
+
+@media (max-width: 640px) {
+  section .row div {
+    width: 100%;
+  }
+  section .row .offset-1 {
+    margin-left: 0;
+  }
+  section .row .tutorial {
+    margin-top: 1.5rem;
+  }
+}
